--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,142 @@
-.flexbox-2 {
+/* General Styles */
+body {
+  font-family: "Roboto", sans-serif;
+}
+ul {
   list-style: none;
+}
+/* Header */
+.background {
+  width: 1920px;
+  min-height: 600px;
+  clip-path: polygon(0 43%, 100% 42%, 100% 68%, 0 88%);
+  position: absolute;
+  bottom: 20rem;
+}
+header {
+  min-height: 400px;
+}
+.header-text {
+  position: relative;
+  top: 5rem;
+  color: white;
+  text-align: center;
+}
+h1 {
+  text-transform: uppercase;
+  font-style: italic;
+} 
+/* Decathlon Partner Top List */
+.container {
   display: flex;
-  justify-content: space-evenly;
+}
+.item1 {
+  width: 50%;
+}
+.item2 {
+  width: 50%;
+}
+.titlebox {
+  position: relative;
+  margin: 0;
+  top: 30%;
+  left: 25%;
+}
+
+hr.title-orangebar {
+  width: 4rem;
+  border: 3px solid #ff600a;
+  margin-left: 0;
+}
+.list-item {
+  display: flex;
+  margin-bottom: 2em;
+}
+.text-partner {
+  padding-left: 2em;
+}
+span {
+  font-weight: bold;
+}
+
+/* Title Box Bottom */
+.container-2 {
+  display: flex;
+  flex-direction: column;
+}
+.title-box {
+  margin-bottom: 2rem;
+}
+.title-orange-bar {
+  
+  width: 4rem;
+  border: 3px solid #ff600a;
+}
+.title-text {
+  text-align: center;
+}
+
+/* How does it work, bottom list */
+.flexbox-2 {
+  display: flex;
+  justify-content: space-between;
+}
+.flexbox-2 img {
+  position: relative;
+  left: 4.5rem;
 }
 p.number {
   text-align: left;
-  position: relative;
-  left: 0.5rem;
+  font-size: 3rem;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  color: rgba(242, 146, 16, 0.4);
 }
 .text-content {
   text-align: center;
   width: 239px;
+  position: relative;
+}
+.text {
+  margin: 0;
+  float: right;
+  position: relative;
+  top: 1.5rem;
+}
+@media screen and (max-width: 720px) {
+  .container {
+    flex-direction: column;
+  }
+  hr.title-orangebar {
+    margin-left: 5rem;
+  }
+  .text-content {
+    text-align: left;
+  }
+  .flexbox-2 {
+    flex-direction: column;
+  }
+  .flexbox-2 li {
+    display: flex;
+  }
+  .flexbox-2 img {
+    position: relative;
+    left: 0.1rem;
+    padding-right: 2rem;
+  }
+  .number {
+    position: relative;
+    top: 0,2rem;
+    left: -6rem;
+  }
+  .text {
+    padding-bottom: 2rem;
+  }
+  .flexbox-2 img {
+    margin-top: 2em;
+  }
+  .title_text {
+    text-align: center;
+  }
 }
